NOTE: Add this to config.php   define('DB_SYSTEM', 'mysql');

09112013 -> jonnyboy -> changed query for pp to speed up query on large databases
09102013 -> jonnyboy -> added option to postprocess movie/tv only renamed releases
						added Safe Binary Threaded update, this maximizes thread usage for all groups, instead of running 1 thread to grab all from 1 group, this should be considered testing only, for now
						added check for $nntp in parsePAR2
09092013 -> jonnyboy -> updated backfill_groups.php and active_groups.php
                        rewrote the trigger to add another check
09082013 -> jonnyboy -> fixed bad patch 119, added triggers for and added index
                        changed pp additonal first query to passwordstatus BETWEEN -2 and -1, seems that -1 and -1 or = -1 takes a very long time
                        fixed bug in grabnzbs where failed to get article deleted collection from collections, added more output to grabnzbs, added unique index to nzbs
                        fixed python script echo properlly when run from php script, other minor tweaks
09072103 -> jonnyboy -> fixed bug where update_binaries not using compression after first grab
                        fixed bug where update_binaries not getting correct set of headers, when postdate fails initial attempt, may need to reset_truncate.php to be safe
                        fixed bug where update_binaries not running correctly on new groups(i hope)
                        fixed bug where parsePAR2 was not using alternate nntp, other minor fixes
09022013 -> jonnyboy -> various, numberous little bug fixes
08312013 -> jonnyboy -> added threaded versions for fixreleasesnames and update_releases, these should be considered alpha and could create invalid releases
                        cleaned up a few bugs
08292013 -> jonnyboy -> changed queries for pg
                        update for changes to decrypt_hashes.php
                        typo in monitor.php