@@ -75,7 +75,7 @@
 					The 'In Process' predb is the total unmatched predb and inside the parenthesis is number changed since the script started. The 'In Database' is the total matched predb's you have and the number inside the parenthesis is the percentage of total releases that you have matched to a predb release.<br />
 					The 'In Process' NZBs are total nzbs, inside the parenthesis is distinct nzbs and 'In Database' are nzbs that have all parts available and will be processed on next run.<br />
 					The 'In Process' requestID is the number waiting to be processed and inside the parenthesis is the number changed since the script started. The 'In Database' is the total matches of releases to requestIDs and inside the parenthesis is percentage of total releases that you have matched to a requestID.
-									</div>
+				</div>
 			</td>
 		</tr>
 		</table>
@@ -115,8 +115,8 @@
 			<tr>
 				<td><label for="BINARIES">Update Binaries:</label></td>
 				<td>
-					{html_radios id="BINARIES" name='BINARIES' values=$truefalse_names output=$truefalse_names selected=$ftmux->BINARIES separator='<br />'}
-					<div class="hint">Choose to run update_binaries true/false. Update binaries gets from your last_record to now. </div>
+					{html_options class="siteeditstyle" id="BINARIES" name='BINARIES' values=$binaries_ids output=$binaries_names selected=$ftmux->BINARIES}
+					<div class="hint">Choose to run update_binaries. Update binaries gets from your last_record to now.<br />Simple Threaded Update runs 1 group per thread.<br />Complete Threaded Update splits all work across multiple threads.</div>
 				</td>
 			</tr>
 
@@ -543,7 +543,7 @@
 					<input id="COLORS_END" name="COLORS_END" class="short" type="text" value="{$ftmux->COLORS_END}" /><br />
 					<input id="COLORS_EXC" name="COLORS_EXC" class="longer" type="text" value="{$ftmux->COLORS_EXC}" />
 					<div class="hint">The color displayed is tmux scripts is randomized from this list.<br />
-					The first box is the start number, the second box is the end number and the last box are the exceptions. An array is created from these numbers.<br />
+					The first box is the start number, the second box is the end number and the last box are the exceptions. An array is created from these numbers.<br \>The exceptions do not need to be in numerical order.<br />The start number must be smaller than the end number.<br />
 					If you connect using putty, then under Window/Translation set Remote character set to UTF-8 and check "Copy and paste line drawing characters". To use 256 colors, you must set Connection/Data Terminal-type string to "xterm-256color" and in Window/Colours check the top three boxes, otherwise only 16 colors are displayed. If you are using FreeBSD, you will need to add export TERM=xterm-256color to your .bashrc file to show 256 colors.</div>
 				</td>
 			</tr>
